--- a/pyrosite/index.html
+++ b/pyrosite/index.html
@@ -7,6 +7,7 @@
 <script src="js/jquery.isotope.js" type="text/javascript"></script> 
 </head>
 <body>
+<!--Thanks to 9bitstudiosIan for the tut. -->
 
  
 <div class="filter">
