--- a/pyrosite/index.html
+++ b/pyrosite/index.html
@@ -7,8 +7,8 @@
 <script src="js/jquery.isotope.js" type="text/javascript"></script> 
 </head>
 <body>
+<!-- Thanks to 9BitStuidosIan for the tut -->
 
- 
 <div class="filter">
 
 	<a href="#" data-filter="*" class="current">All Genre</a>
