--- a/pyrosite/index.html
+++ b/pyrosite/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>jQuery Isotope</title>
+<title>Pyrocleptic Gaming</title>
 <link rel="stylesheet" href="css/style.css">
 <!--Thanks to 9bitstudiosIan for the tut. -->
 </head>
 <body>
 
-
+<div class="spaceholder">
+</div>
 
 <div class="filter">
 
-	<a href="#" data-filter="*" class="current">All Genre</a>
+	<a href="#" data-filter="*" class="current">All</a>
 	<a href="#" data-filter=".action">Action</a>
 	<a href="#" data-filter=".adventure">Adventure</a>
 	<a href="#" data-filter=".fps">FPS</a>
@@ -23,67 +24,45 @@
 </div>
 
 <div class="container">
-
-		<div class="action adventure" data-catagory="action">
-			<img src="images/testimg.jpg" alt="image">
-		</div>
-
-		<div class="adventure">
-			<img src="images/testimg2.jpg" alt="image">
-		</div>
-
-		<div class="fps">
-			<img src="images/testimg3.jpg" alt="image">
-		</div>
-
-		<div class="mmorpg">
-			<img src="images/testimg4.jpg" alt="image">
-		</div>
-
-		<div class="rpg">
-			<img src="images/testimg5.jpg" alt="image">
-		</div>
-
-		<div class="action adventure hackandslash">
-			<img src="images/testimg6.jpg" alt="image">
-		</div>
+	
+	<div class="action adventure img" data-catagory="action">
+		<img class="img" src="images/testimg.jpg" alt="image">
+	</div>
+	<div class="adventure img">
+		<img class="img" src="images/testimg2.jpg" alt="image">		
+	</div>
+	<div class="fps img">
+		<img class="img" src="images/testimg3.jpg" alt="image">
+	</div>
+	<div class="mmorpg img">
+		<img class="img" src="images/testimg4.jpg" alt="image">
+	</div>
+	<div class="rpg img">
+		<img class="img" src="images/testimg5.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/testimg6.jpg" alt="image">
+	</div>
+		<div class="rpg img">
+		<img class="img" src="images/testimg5.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/testimg6.jpg" alt="image">
+	</div>
+		<div class="rpg img">
+		<img class="img" src="images/testimg5.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/testimg6.jpg" alt="image">
+	</div>
+	
 	
 </div>
  
 
+
 <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
 <script src="js/jquery.isotope.js" type="text/javascript"></script> 
-<script type="text/javascript">
-
-$(window).load(function(){
-    var $container = $('.container');
-    $container.isotope({
-        filter: '*',
-        animationOptions: {
-            duration: 750,
-            easing: 'linear',
-            queue: false
-        }
-    });
- 
-    $('.filter a').click(function(){
-        $('.filter .current').removeClass('current');
-        $(this).addClass('current');
- 
-        var selector = $(this).attr('data-filter');
-        $container.isotope({
-            filter: selector,
-            animationOptions: {
-                duration: 750,
-                easing: 'linear',
-                queue: false
-            }
-         });
-         return false;
-    }); 
-});
-
-</script>
-
+<script src="js/animation.js" type="text/javascript"></script>
 </body>
 </html>
