--- a/pyrosite/index.html
+++ b/pyrosite/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<div class="spaceholder">
-</div>
+<div class="reviewwrapper">
+
 
 <div class="filter">
 
@@ -55,8 +55,39 @@
 	<div class="action adventure hackandslash img">
 		<img class="img" src="images/testimg6.jpg" alt="image">
 	</div>
+		<div class="action adventure img" data-catagory="action">
+		<img class="img" src="images/testimg.jpg" alt="image">
+	</div>
+	<div class="adventure img">
+		<img class="img" src="images/testimg2.jpg" alt="image">		
+	</div>
+	<div class="fps img">
+		<img class="img" src="images/testimg3.jpg" alt="image">
+	</div>
+	<div class="mmorpg img">
+		<img class="img" src="images/testimg4.jpg" alt="image">
+	</div>
+	<div class="rpg img">
+		<img class="img" src="images/testimg5.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/testimg6.jpg" alt="image">
+	</div>
+		<div class="rpg img">
+		<img class="img" src="images/testimg5.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/testimg6.jpg" alt="image">
+	</div>
+		<div class="rpg img">
+		<img class="img" src="images/testimg5.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/testimg6.jpg" alt="image">
+	</div>
+
 	
-	
+</div>
 </div>
  
 
