--- a/pyrosite/index.html
+++ b/pyrosite/index.html
@@ -7,7 +7,27 @@
 </head>
 <body>
 
-<div class="reviewwrapper">
+<div class="logo">
+	<img class="logogo" src="images/logo.png" alt="logo">
+</div>
+
+<div class="nav-wrap">
+	<nav>
+	<ul>
+		<li><a href="index.html">HOME</a></li>
+		<li><a href="#">REVIEWS</a></li>
+		<li><a href="#">STREAMS</a></li>
+		<li><a href="#">MEDIA</a></li>
+		<li><a href="#">ABOUT</a></li>
+		<li class="pro" ><a class="pro" href="#">PRO GAMING</a></li>
+	</ul>
+	</nav>
+
+</div>
+
+<div class="nav">
+	<img class="navimg" src="images/nav.png" alt="woohooo">
+</div>
 
 
 <div class="filter">
@@ -22,68 +42,107 @@
 
 
 </div>
+<div class="reviewwrapper">
+
+
 
 <div class="container">
 	
 	<div class="action adventure img" data-catagory="action">
-		<img class="img" src="images/testimg.jpg" alt="image">
+		<img class="img" src="images/test.jpg" alt="image">
 	</div>
 	<div class="adventure img">
-		<img class="img" src="images/testimg2.jpg" alt="image">		
+		<img class="img" src="images/test1.jpg" alt="image">		
 	</div>
 	<div class="fps img">
-		<img class="img" src="images/testimg3.jpg" alt="image">
+		<img class="img" src="images/test2.jpg" alt="image">
 	</div>
 	<div class="mmorpg img">
-		<img class="img" src="images/testimg4.jpg" alt="image">
+		<img class="img" src="images/test3.jpg" alt="image">
 	</div>
 	<div class="rpg img">
-		<img class="img" src="images/testimg5.jpg" alt="image">
+		<img class="img" src="images/test4.jpg" alt="image">
 	</div>
 	<div class="action adventure hackandslash img">
-		<img class="img" src="images/testimg6.jpg" alt="image">
+		<img class="img" src="images/test5.jpg" alt="image">
 	</div>
 		<div class="rpg img">
-		<img class="img" src="images/testimg5.jpg" alt="image">
+		<img class="img" src="images/test5.jpg" alt="image">
 	</div>
 	<div class="action adventure hackandslash img">
-		<img class="img" src="images/testimg6.jpg" alt="image">
+		<img class="img" src="images/test5.jpg" alt="image">
 	</div>
 		<div class="rpg img">
-		<img class="img" src="images/testimg5.jpg" alt="image">
+		<img class="img" src="images/test4.jpg" alt="image">
 	</div>
 	<div class="action adventure hackandslash img">
-		<img class="img" src="images/testimg6.jpg" alt="image">
+		<img class="img" src="images/test5.jpg" alt="image">
 	</div>
 		<div class="action adventure img" data-catagory="action">
-		<img class="img" src="images/testimg.jpg" alt="image">
+		<img class="img" src="images/test1.jpg" alt="image">
 	</div>
 	<div class="adventure img">
-		<img class="img" src="images/testimg2.jpg" alt="image">		
+		<img class="img" src="images/test1.jpg" alt="image">		
 	</div>
 	<div class="fps img">
-		<img class="img" src="images/testimg3.jpg" alt="image">
+		<img class="img" src="images/test2.jpg" alt="image">
 	</div>
 	<div class="mmorpg img">
-		<img class="img" src="images/testimg4.jpg" alt="image">
+		<img class="img" src="images/test3.jpg" alt="image">
 	</div>
 	<div class="rpg img">
-		<img class="img" src="images/testimg5.jpg" alt="image">
+		<img class="img" src="images/test4.jpg" alt="image">
 	</div>
 	<div class="action adventure hackandslash img">
-		<img class="img" src="images/testimg6.jpg" alt="image">
+		<img class="img" src="images/test5.jpg" alt="image">
 	</div>
 		<div class="rpg img">
-		<img class="img" src="images/testimg5.jpg" alt="image">
+		<img class="img" src="images/test4.jpg" alt="image">
 	</div>
 	<div class="action adventure hackandslash img">
-		<img class="img" src="images/testimg6.jpg" alt="image">
+		<img class="img" src="images/test5.jpg" alt="image">
 	</div>
 		<div class="rpg img">
-		<img class="img" src="images/testimg5.jpg" alt="image">
+		<img class="img" src="images/test4.jpg" alt="image">
 	</div>
 	<div class="action adventure hackandslash img">
-		<img class="img" src="images/testimg6.jpg" alt="image">
+		<img class="img" src="images/test5.jpg" alt="image">
+	</div>
+		<div class="rpg img">
+		<img class="img" src="images/test4.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/test5.jpg" alt="image">
+	</div>
+		<div class="rpg img">
+		<img class="img" src="images/test4.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/test5.jpg" alt="image">
+	</div>
+		<div class="rpg img">
+		<img class="img" src="images/test4.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/test5.jpg" alt="image">
+	</div>
+		<div class="rpg img">
+		<img class="img" src="images/test4.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/test5.jpg" alt="image">
+	</div>
+		<div class="rpg img">
+		<img class="img" src="images/test4.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/test5.jpg" alt="image">
+	</div>
+		<div class="rpg img">
+		<img class="img" src="images/test4.jpg" alt="image">
+	</div>
+	<div class="action adventure hackandslash img">
+		<img class="img" src="images/test5.jpg" alt="image">
 	</div>
 
 	
@@ -92,7 +151,7 @@
  
 
 
-<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
+<script src="js/jquery.js" type="text/javascript"></script>
 <script src="js/jquery.isotope.js" type="text/javascript"></script> 
 <script src="js/animation.js" type="text/javascript"></script>
 </body>
