fix some css, killed some styles though

--- a/pyrosite/index.html
+++ b/pyrosite/index.html
@@ -1,158 +1,132 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Pyrocleptic Gaming</title>
-<link rel="stylesheet" href="css/style.css">
-<!--Thanks to 9bitstudiosIan for the tut. -->
+    <title>Pyrocleptic Gaming</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!--Thanks to 9bitstudiosIan for the tut. -->
 </head>
 <body>
-
-<div class="logo">
-	<img class="logogo" src="images/logo.png" alt="logo">
-</div>
-
-<div class="nav-wrap">
-	<nav>
-	<ul>
-		<li><a href="index.html">HOME</a></li>
-		<li><a href="#">REVIEWS</a></li>
-		<li><a href="#">STREAMS</a></li>
-		<li><a href="#">MEDIA</a></li>
-		<li><a href="#">ABOUT</a></li>
-		<li class="pro" ><a class="pro" href="#">PRO GAMING</a></li>
-	</ul>
-	</nav>
-
-</div>
-
-<div class="nav">
-	<img class="navimg" src="images/nav.png" alt="woohooo">
-</div>
-
-
-<div class="filter">
-
-	<a href="#" data-filter="*" class="current">All</a>
-	<a href="#" data-filter=".action">Action</a>
-	<a href="#" data-filter=".adventure">Adventure</a>
-	<a href="#" data-filter=".fps">FPS</a>
-	<a href="#" data-filter=".mmorpg">MMORPG</a>
-	<a href="#" data-filter=".rpg">RPG</a>
-	<a href="#" data-filter=".hackandslash">HackN'Slash</a>
-
-
-</div>
-<div class="reviewwrapper">
-
-
-
 <div class="container">
-	
-	<div class="action adventure img" data-catagory="action">
-		<img class="img" src="images/test.jpg" alt="image">
-	</div>
-	<div class="adventure img">
-		<img class="img" src="images/test1.jpg" alt="image">		
-	</div>
-	<div class="fps img">
-		<img class="img" src="images/test2.jpg" alt="image">
-	</div>
-	<div class="mmorpg img">
-		<img class="img" src="images/test3.jpg" alt="image">
-	</div>
-	<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="rpg img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="action adventure img" data-catagory="action">
-		<img class="img" src="images/test1.jpg" alt="image">
-	</div>
-	<div class="adventure img">
-		<img class="img" src="images/test1.jpg" alt="image">		
-	</div>
-	<div class="fps img">
-		<img class="img" src="images/test2.jpg" alt="image">
-	</div>
-	<div class="mmorpg img">
-		<img class="img" src="images/test3.jpg" alt="image">
-	</div>
-	<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-		<div class="rpg img">
-		<img class="img" src="images/test4.jpg" alt="image">
-	</div>
-	<div class="action adventure hackandslash img">
-		<img class="img" src="images/test5.jpg" alt="image">
-	</div>
-
-	
+    <div class="logo"></div>
+    <nav class="nav">
+        <a href="index.html">HOME</a>
+        <a href="#">REVIEWS</a>
+        <a href="#">STREAMS</a>
+        <a href="#">ABOUT</a>
+    </nav>
+    <div class="isotope-container">
+        <section class="filter">
+            <a href="#" data-filter="*" class="current">All</a>
+            <a href="#" data-filter=".action">Action</a>
+            <a href="#" data-filter=".adventure">Adventure</a>
+            <a href="#" data-filter=".fps">FPS</a>
+            <a href="#" data-filter=".mmorpg">MMORPG</a>
+            <a href="#" data-filter=".rpg">RPG</a>
+            <a href="#" data-filter=".hackandslash">HackN'Slash</a>
+        </section>
+        <div class="reviewwrapper">
+            <div class="action adventure img" data-catagory="action">
+                <img class="img" src="images/test.jpg" alt="image">
+            </div>
+            <div class="adventure img">
+                <img class="img" src="images/test1.jpg" alt="image">
+            </div>
+            <div class="fps img">
+                <img class="img" src="images/test2.jpg" alt="image">
+            </div>
+            <div class="mmorpg img">
+                <img class="img" src="images/test3.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="action adventure img" data-catagory="action">
+                <img class="img" src="images/test1.jpg" alt="image">
+            </div>
+            <div class="adventure img">
+                <img class="img" src="images/test1.jpg" alt="image">
+            </div>
+            <div class="fps img">
+                <img class="img" src="images/test2.jpg" alt="image">
+            </div>
+            <div class="mmorpg img">
+                <img class="img" src="images/test3.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+            <div class="rpg img">
+                <img class="img" src="images/test4.jpg" alt="image">
+            </div>
+            <div class="action adventure hackandslash img">
+                <img class="img" src="images/test5.jpg" alt="image">
+            </div>
+        </div>
+    </div>
 </div>
-</div>
- 
-
 
 <script src="js/jquery.js" type="text/javascript"></script>
-<script src="js/jquery.isotope.js" type="text/javascript"></script> 
+<script src="js/jquery.isotope.js" type="text/javascript"></script>
 <script src="js/animation.js" type="text/javascript"></script>
 </body>
 </html>
