Readded styling to Todd's branch, site is running smoother.

--- a/pyrosite/index.html
+++ b/pyrosite/index.html
@@ -3,16 +3,25 @@
 <head>
     <title>Pyrocleptic Gaming</title>
     <link rel="stylesheet" href="css/style.css">
-    <!--Thanks to 9bitstudiosIan for the tut. -->
+
+    <!--Thanks to 9bitstudios Ian for the tut. -->
 </head>
 <body>
 <div class="container">
-    <div class="logo"></div>
+    <div class="logo">
+        <img class="pyrologo" src="images/logo.png" alt="pyrologo">
+    </div>
+
+    <div class="navback">
+        <img src="images/cray.png" alt="woo">
+    </div>
+
     <nav class="nav">
-        <a href="index.html">HOME</a>
-        <a href="#">REVIEWS</a>
-        <a href="#">STREAMS</a>
-        <a href="#">ABOUT</a>
+        <a class="select" href="#">HOME</a>
+        <a class="select" href="#">REVIEWS</a>
+        <a class="select" href="#">STREAMS</a>
+        <a class="select" href="#">ABOUT</a> 
+        <a class="select2" href="#">PRO CIRCUT</a>    
     </nav>
     <div class="isotope-container">
         <section class="filter">
